# DesktopPet

./: .gitignore  CMakeLists.txt  readme.md
Sources/: QNChatMessage.cpp  TaskCat.cpp  catwindow.cpp  dialogwindow.cpp  kitcoonwindow.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp
Sources/Forms/: catwindow.ui  dialogwindow.ui  kitcoonwindow.ui  loginwindow.ui  mainwindow.ui  ui_catwindow.h  ui_dialogwindow.h  ui_kitcoonwindow.h  ui_loginwindow.h  ui_mainwindow.h
Sources/Headers/: AuthManager.h  QNChatMessage.h  TaskCat.h  catwindow.h  dialogwindow.h  kitcoonwindow.h  loginwindow.h  mainwindow.h
res/: app_win32.rc  res.qrc
